[package]
name = "kaspa-claw-skills-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]


[[bin]]
name = "test-rpc"
path = "src/main.rs"

[dependencies]
kaspa-wrpc-client  = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-rpc-core     = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-core         = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-wallet-core  = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
workflow-rpc         = "0.18"
tokio              = { version = "1", features = ["full"] }
anyhow             = "1.0"      
serde_json         = "1.0"                       
