[package]
name = "kaspa-query"
version = "0.1.0"
edition = "2021"

[dependencies]
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-rpc-core    = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
kaspa-core        = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
tokio             = { version = "1", features = ["full"] }
anyhow            = "1.0"
serde             = { version = "1.0", features = ["derive"] }
serde_json        = "1.0"
workflow-rpc      = "0.18"
clap              = { version = "4.0", features = ["derive"] }  # 支持命令行参数